# orange-jumpsuit

./: .gitignore  README.md  build.sh  build_lib.bat  build_lib.sh  build_python_wheel.bat  build_python_wheel.sh  build_so.sh  build_test.sh  compile_commands.json  flake.nix  profile.sh  profiler.out  shell.nix
.github/workflows/: publish.yml
data/: links.txt
docs/: Algoritmo.tex  Conclusion.tex  Documentacion.tex  Implementacion.tex  Introduccion.tex  Limitaciones.tex  Makefile  ManualDeUso.tex  Referencias.bib  UsoDeIA.tex
notebook-example/: ComparingTest.ipynb  kmeans_visualization.ipynb  requirements.txt  shell.nix
notebook-example/.ipynb_checkpoints/: ComparingTest-checkpoint.ipynb  pip_debug-checkpoint.txt  quantization_testing-checkpoint.ipynb  shell-checkpoint.nix
notebook-examples/: ComparingTest.ipynb  SemanticSearch.ipynb  requirements.txt
notebook-examples/.ipynb_checkpoints/: SemanticSearch-checkpoint.ipynb  Untitled-checkpoint.ipynb
python/: MANIFEST.in  dummy.c  example.py  jumpsuit.py  pyproject.toml  setup.py
python/orange_jumpsuit/: __init__.py  wrapper.py
src/: basics.h  jumpsuit.c  jumpsuit.h  linux_helpers.h  linux_jumpsuit.c  platform_helpers.h  profiler.h
src/tests/: basics.h  kmeans_testing.c  linux_helpers.c  linux_jumpsuit.c  quantization_testing.c  sift_parsing.c
